force-app/main/default/objects/VisualAntidote__Staging_Submission__c/VisualAntidote__Staging_Submission__c.object-meta.xml
<CustomObject>
    <label>Staging Submission</label>
    <nameField>
        <displayFormat>FSS-{00000}</displayFormat>
        <label>Staging Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>