force-app/main/default/objects/VisualAntidote__Staging_Submission__c/fields/VisualAntidote__IP_Address__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__IP_Address__c</fullName>
    <label>IP Address</label>
    <length>15</length>
    <type>Text</type>
</CustomField>