force-app/main/default/objects/VisualAntidote__Staging_Submission__c/fields/VisualAntidote__Object__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>