force-app/main/default/objects/VisualAntidote__Staging_Submission__c/fields/VisualAntidote__Reference_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Reference_Field_Name__c</fullName>
    <label>Reference Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>