force-app/main/default/objects/VisualAntidote__Staging_Submission__c/fields/VisualAntidote__Reference_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Reference_Record_Id__c</fullName>
    <label>Reference Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>