force-app/main/default/objects/VisualAntidote__Staging_Submission__c/fields/VisualAntidote__Repeat_Index__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Repeat_Index__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Repeat Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>