force-app/main/default/objects/VisualAntidote__Staging_Submission__c/fields/VisualAntidote__Upsert_Fields__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Upsert_Fields__c</fullName>
    <label>Upsert Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>